# time_series_classifier

./: .gitignore  README.md  pyproject.toml
scripts/: cv_search.py  train_classifier.py  trend_classifier.py
search_results/: cv_search_results.json
src/classifier/: config.py  cv_tuning.py  data_processing.py  model.py  train_helpers.py
