[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "trend-classifier"
version = "0.1.0"
description = "Transformer-based time-series trend classification"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Your Name" }
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "yfinance>=0.2"
]


[tool.setuptools.packages.find]
where = ["src"]
